# TestMCP

./: analyse_insee_injep.py  db.sqlite3  mcp_server.py  pyproject.toml
ConferenceApp/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
ConferenceApp/migrations/: 0001_initial.py  0002_initial.py  0003_submission_submission_id_alter_conference_name_and_more.py
INSEE_INJEP_downloads/: 70_SAC-78_ESS.xlsx  ScrapedData.xlsx  cond-vie-soc-particip-vie-asso-sexe.xlsx
SessionApp/: admin.py  forms.py  models.py  urls.py  views.py
SessionApp/migrations/: 0001_initial.py  0002_alter_session_title.py
UserApp/: admin.py  forms.py  models.py  views.py
UserApp/migrations/: 0001_initial.py  0002_alter_user_user_id.py
firstApp/: models.py
firstApp/migrations/: 0001_initial.py  0002_student_address.py  0003_classe_student_classe.py
firstProject/: settings.py  urls.py
static/css/: style.css
templates/: base.html  home.html  login.html
templates/ConferenceApp/: conference_confirm_delete.html  conference_detail.html  conference_form.html  home.html  list.html  welcome.html
templates/SessionApp/: session_confirm_delete.html  session_detail.html  session_form.html  session_list.html
templates/UserApp/: register.html
